Fix buttons to align left

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -218,7 +218,7 @@ a {
     background: $bg;
     width: 70%;
     height: 40%;
-    justify-content: end;
+    justify-content: start;
     bottom: 0%;
 }
 
